sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:12: error: not found: value i
    while(i+ecart<getNombreValeurs()){
          ^AlgCombSort:13: error: not found: value i
      if(plusPetit(i+ecart,i)){
                   ^AlgCombSort:13: error: not found: value i
      if(plusPetit(i+ecart,i)){
                           ^AlgCombSort:14: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:14: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:15: error: not found: value j
        j=true
        ^AlgCombSort:17: error: not found: value i
      i+=1
      ^AlgCombSort:20: error: not found: value j
    while(ecart>1 || j==true)
                     ^