sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Int = getNombreValeurs()
  var fini:Boolean=false
  var nop:Int=0
  
  do{
    if(ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt}
    nop=0
    fini=false
    while(i+ecart<getNombreValeurs()){
      if(plusPetit(i+ecart,i)){
        echange(i,i+ecart)
        j=true
      }
      i+=1
    }
  }
    while(ecart>1 || j==true)
    }
  